@@ -4,7 +4,6 @@ import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
@@ -18,11 +17,8 @@ import com.conkiri.domain.ticketing.entity.Status;
 import com.conkiri.domain.ticketing.repository.ResultRepository;
 import com.conkiri.domain.user.entity.User;
 import com.conkiri.domain.user.service.UserReadService;
-import com.conkiri.global.exception.ticketing.AlreadyReservedSeatException;
-import com.conkiri.global.exception.ticketing.DuplicateTicketingException;
-import com.conkiri.global.exception.ticketing.InvalidSeatException;
-import com.conkiri.global.exception.ticketing.InvalidSectionException;
-import com.conkiri.global.exception.ticketing.RecordNotFoundException;
+import com.conkiri.global.exception.BaseException;
+import com.conkiri.global.exception.ErrorCode;
 import com.conkiri.global.util.RedisKeys;
 
 import lombok.RequiredArgsConstructor;
@@ -44,8 +40,6 @@ public class TicketingService {
 
 		validateSection(section);
 		String sectionKey = RedisKeys.getSectionKey(section);
-		redisTemplate.delete(sectionKey);
-
 		initializeAllSeatsInSection(sectionKey);
 	}
 
@@ -60,11 +54,6 @@ public class TicketingService {
 		}
 	}
 
-	// 구역 목록 조회
-	public List<String> getSections() {
-		return Section.getSections();
-	}
-
 	// 특정 구역의 좌석 상태 조회
 	public SeatResponseDTO getSeatsForSection(String section) {
 
@@ -75,21 +64,24 @@ public class TicketingService {
 				entry.getKey().toString(),
 				entry.getValue().toString()
 			))
-			.collect(Collectors.toList());
+			.toList();
 
 		return SeatResponseDTO.from(seatDetails);
 	}
 
-	// 좌석 예약
-	// * 1. request 유효성 검증
-	// * 2. 좌석 락 획득
-	// * 3. 좌석 유효성 검증
-	// * 4. 좌석 예매
-	// * 5. 좌석 락 해제
+	/*
+		좌석 예약
+	 	1. request 유효성 검증
+	 	2. 좌석 락 획득
+	 	3. 좌석 유효성 검증
+	 	4. 좌석 예매
+	 	5. 좌석 락 해제
+	*/
 	public void reserveSeat(Long userId, String section, String seat) {
 
 		validateReservationRequest(userId, section, seat);
 		String lockKey = RedisKeys.getSeatLockKey(section, seat);
+
 
 		try {
 			acquireLock(lockKey);
@@ -108,32 +100,30 @@ public class TicketingService {
 			.setIfAbsent(lockKey, "LOCKED", Duration.ofSeconds(3));
 
 		if (acquired == null || !acquired) {
-			throw new AlreadyReservedSeatException();
+			throw new BaseException(ErrorCode.ALREADY_RESERVED_SEAT);
 		}
 	}
 
-	// 실제 좌석 예매 처리
-	// * 1. 좌석 상태를 Reserved 로 변경
-	// * 2. 예매 히스토리 저장
+	/*
+	  실제 좌석 예매 처리
+	  1. 좌석 상태를 Reserved 로 변경
+	  2. 예매 히스토리 저장
+	*/
 	private void processSeatReservation(Long userId, String section, String seat, String sectionKey) {
 
 		String historyKey = RedisKeys.getUserHistoryKey(userId);
-		Long rank = redisTemplate.opsForValue().increment(RedisKeys.RESERVATION);
 		redisTemplate.opsForHash().put(sectionKey, seat, Status.RESERVED.getValue());
-		saveReservationHistory(historyKey, userId, section, seat, rank);
+		saveReservationHistory(historyKey, userId, section, seat);
 	}
 
 	// 예매 정보 저장
-	private void saveReservationHistory(String userHistoryKey, Long userId, String section, String seat, Long rank) {
+	private void saveReservationHistory(String userHistoryKey, Long userId, String section, String seat) {
 		LocalDateTime now = LocalDateTime.now();
 
 		// 사용자의 예매 내역 저장
 		redisTemplate.opsForHash().put(userHistoryKey, "section", section);
 		redisTemplate.opsForHash().put(userHistoryKey, "seat", seat);
 		redisTemplate.opsForHash().put(userHistoryKey, "reserveTime", now.toString());
-		redisTemplate.opsForHash().put(userHistoryKey, "rank", String.valueOf(rank));
-		redisTemplate.opsForHash().put(userHistoryKey, "reserveNanoTime", String.valueOf(System.nanoTime()));  // 예매 시점의 나노타임 저장
-
 
 		// 해당 좌석의 예매 내역 저장
 		String seatHistoryKey = RedisKeys.getSeatHistoryKey(section, seat);
@@ -141,98 +131,77 @@ public class TicketingService {
 		redisTemplate.opsForHash().put(seatHistoryKey, "reserveTime", now.toString());
 	}
 
+	// 예매 취소
+	public void deleteTicketingResult(Long userId) {
+		String userHistoryKey = RedisKeys.getUserHistoryKey(userId);
+		String section = (String) redisTemplate.opsForHash().get(userHistoryKey, "section");
+		String seat = (String) redisTemplate.opsForHash().get(userHistoryKey, "seat");
+		if (section != null && seat != null) {
+			String sectionKey = RedisKeys.getSectionKey(section);
+			redisTemplate.opsForHash().put(sectionKey, seat, Status.AVAILABLE.getValue());
+
+			String seatHistoryKey = RedisKeys.getSeatHistoryKey(section, seat);
+			redisTemplate.delete(seatHistoryKey);
+		}
+
+		redisTemplate.opsForHash().delete(userHistoryKey, "reserveTime");
+		redisTemplate.opsForHash().delete(userHistoryKey, "section");
+		redisTemplate.opsForHash().delete(userHistoryKey, "seat");
+	}
 
 	// 티켓팅 결과 조회
 	public TicketingResultResponseDTO getTicketingResult(Long userId) {
 		String historyKey = RedisKeys.getUserHistoryKey(userId);
 		Map<Object, Object> history = redisTemplate.opsForHash().entries(historyKey);
-
 		if (history.isEmpty()) {
-			return null;
+			throw new BaseException(ErrorCode.RECORD_NOT_FOUND);
 		}
 
 		String section = (String) history.get("section");
 		String seat = (String) history.get("seat");
-		Long rank = Long.parseLong((String) history.get("rank"));
-
-		// Double로 파싱한 후 Long으로 변환
-		double queueTimeDouble = Double.parseDouble((String) history.get("queueTime"));
-		double reserveNanoTimeDouble = Double.parseDouble((String) history.get("reserveNanoTime"));
-		Long processingTime = (long)((reserveNanoTimeDouble - queueTimeDouble) / 1_000_000_000);
-
 		LocalDateTime reserveTime = LocalDateTime.parse((String) history.get("reserveTime"));
-
-		return new TicketingResultResponseDTO(section, seat, rank, processingTime, reserveTime);
+		String concertName = (String)redisTemplate.opsForHash().get(RedisKeys.TIME, "concertName");
+		String ticketingPlatform = (String)redisTemplate.opsForHash().get(RedisKeys.TIME, "ticketingPlatform");
+		return TicketingResultResponseDTO.of(concertName, ticketingPlatform, section, seat, reserveTime);
 	}
-
 
 	// 결과 저장
 	public void saveTicketingResult(Long userId) {
-		TicketingResultResponseDTO resultDTO = getTicketingResult(userId);
-		if (resultDTO == null) {
-			throw new RecordNotFoundException();
-		}
 
-		System.out.println("save 전!!");
-		System.out.println(resultDTO + " " + resultDTO.getSeat());
+		TicketingResultResponseDTO resultDTO = getTicketingResult(userId);
 		User user = userReadService.findUserByIdOrElseThrow(userId);
 		Result result = Result.of(resultDTO, user);
 		resultRepository.save(result);
-		System.out.println("save 후!!");
 	}
 
 	// 마이페이지용 전체 결과 조회
-	public List<TicketingResultResponseDTO> getAllTicketingResults(Long userId) {
-		return resultRepository.findByUser_UserIdOrderByReserveTimeDesc(userId)
+	public List<TicketingResultResponseDTO> getAllTicketingResults(User user) {
+		return resultRepository.findByUserOrderByReserveTimeDesc(user)
 			.stream()
-			.map(result -> new TicketingResultResponseDTO(
+			.map(result -> TicketingResultResponseDTO.of(
+				result.getConcertName(),
+				result.getTicketingPlatform(),
 				result.getSection(),
 				result.getSeat(),
-				result.getTicketRank(),
-				result.getProcessingTime(),
 				result.getReserveTime()
 			))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
-	public void deleteTicketingResult(Long userId) {
-		String userHistoryKey = RedisKeys.getUserHistoryKey(userId);
-
-		String section = (String) redisTemplate.opsForHash().get(userHistoryKey, "section");
-		String seat = (String) redisTemplate.opsForHash().get(userHistoryKey, "seat");
-		if (section != null && seat != null) {
-			// 좌석 상태 변경
-			String sectionKey = RedisKeys.getSectionKey(section);
-			redisTemplate.opsForHash().put(sectionKey, seat, Status.AVAILABLE.getValue());
-
-			// 좌석 히스토리 삭제
-			String seatHistoryKey = RedisKeys.getSeatHistoryKey(section, seat);
-			redisTemplate.delete(seatHistoryKey);
-		}
-
-		// reserveTime만 삭제
-		redisTemplate.opsForHash().delete(userHistoryKey, "reserveTime");
-		redisTemplate.opsForHash().delete(userHistoryKey, "section");
-		redisTemplate.opsForHash().delete(userHistoryKey, "seat");
-		redisTemplate.opsForHash().delete(userHistoryKey, "rank");
-		redisTemplate.opsForHash().delete(userHistoryKey, "reserveNanoTime");
-
-		// 대기열 관련 정보(queueTime, position)는 유지
-	}
+	/*
+		유효성 검사
+	*/
 
 	//  좌석 상태 유효성 검사
 	private void validateSeatAvailability(String sectionKey, String seat) {
 
 		String currentStatus = (String)redisTemplate.opsForHash().get(sectionKey, seat);
 		if (!Status.AVAILABLE.getValue().equals(currentStatus)) {
-			throw new AlreadyReservedSeatException();
+			throw new BaseException(ErrorCode.ALREADY_RESERVED_SEAT);
 		}
 	}
 
 	// 예약 요청에 대한 전반적인 유효성 검사
-	//  * 1. 구역 유효성 검사
-	//  * 2. 좌석 번호 유효성 검사
-	//  * 3. 중복 예약 검사
 	private void validateReservationRequest(Long userId, String section, String seat) {
 
 		validateSection(section);
@@ -240,18 +209,20 @@ public class TicketingService {
 		validateNoExistingReservation(userId);
 	}
 
+	// 구역 검사
 	public void validateSection(String section) {
 
 		if (!Section.isValidSection(section)) {
-			throw new InvalidSectionException();
+			throw new BaseException(ErrorCode.INVALID_SECTION);
 		}
 	}
 
+	// 좌석 검사
 	public void validateSeat(String seat) {
 
 		try {
 			if (seat == null || !seat.matches("\\d+-\\d+")) {
-				throw new InvalidSeatException();
+				throw new BaseException(ErrorCode.INVALID_SEAT);
 			}
 
 			String[] parts = seat.split("-");
@@ -259,22 +230,28 @@ public class TicketingService {
 			int col = Integer.parseInt(parts[1]);
 
 			if (row < 1 || row > MAX_ROW || col < 1 || col > MAX_COL) {
-				throw new InvalidSeatException();
+				throw new BaseException(ErrorCode.INVALID_SEAT);
 			}
 		} catch (NumberFormatException e) {
-			throw new InvalidSeatException();
+			throw new BaseException(ErrorCode.INVALID_SEAT);
 		}
 	}
 
+	// 중복 예매 검사
 	private void validateNoExistingReservation(Long userId) {
+
 		String userHistoryKey = RedisKeys.getUserHistoryKey(userId);
-		if (redisTemplate.opsForHash().hasKey(userHistoryKey, "reserveTime")) {
+		Boolean hasReservation = redisTemplate.opsForHash().hasKey(userHistoryKey, "reserveTime");
+
+		if (Boolean.TRUE.equals(hasReservation)) {
 			log.info("User {} already has a reservation", userId);
-			throw new DuplicateTicketingException();
+			throw new BaseException(ErrorCode.DUPLICATE_TICKETING);
 		}
 	}
 
-	// 유틸리티 메서드
+	/*
+		유틸 메서드
+	*/
 	private String formatSeatNumber(int row, int col) {
 		return row + "-" + col;
 	}
